@@ -10,6 +10,10 @@ Version 1.11.8+dev:
    * Fixed subtle magenta TC for the Giant Mudcrawler sprites not being
      enabled in-game.
 
+ * Miscellaneous and bug fixes:
+   * Fixed possible invalid memory access issue in the MP sides configuration
+     code causing crashes for some users (bug #21449).
+
 
 Version 1.11.8:
  * Add-ons client:
