@@ -7,6 +7,8 @@ Version 1.11.8+dev:
  * Miscellaneous and bug fixes:
    * Added -Wno-documentation-deprecated-sync to the CMake pedantic flags.
    * Fixed several Doxygen issues found by Clang 3.4.
+   * Fixed possible invalid memory access issue in the MP sides configuration
+     code causing crashes for some users (bug #21449).
 
 Version 1.11.8:
  * Add-ons client:
